hphp/test/vm/clsconstant_redecl3.php.expectf
HipHop Fatal error: Cannot override previously defined constant A::FOO in C in %s on line 13
